REsolved the scrollbar issue in whole application with h1 margin

--- a/src/components/app-shell/AppShell.less
+++ b/src/components/app-shell/AppShell.less
@@ -70,4 +70,5 @@ body, html {
     padding: 1rem;
     padding-top: 0;
     border-right: 1px solid @lightBorderColor;
+    overflow: auto;
 }
